created reservations-list of user and implemented cancel&logout
